chore: improve CI/CD, add open source best practices and fix package-lock.json tracking
FIXES: GitHub Actions CI error about missing package-lock.json

Changes:
- Remove package-lock.json from .gitignore (required for reproducible builds)
- Add package-lock.json to git tracking
- Improve CI workflow with concurrency control and better error messages
- Update publish workflow to use Node 20.x and add build verification
- Add .npmignore files to packages for cleaner npm distributions
- Add .github/dependabot.yml for automated dependency updates
- Add .github/pull_request_template.md for consistent PR descriptions
- Add .github/ISSUE_TEMPLATE for bug reports and feature requests
- Add CONTRIBUTING.md with contribution guidelines
- Add CODE_OF_CONDUCT.md for community standards
- Update root README.md with contributing and support sections
- Update root package.json with engines field and additional metadata

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -42,7 +46,10 @@ jobs:
           fi
           echo "Build artifacts verified successfully"
 
-      - name: Check for modified build artifacts
+      - name: Check for uncommitted changes
         run: |
-          git diff --exit-code || (echo "Error: Build artifacts were modified" && exit 1)
+          if ! git diff --exit-code; then
+            echo "Error: Build artifacts have changed. Ensure dist files are generated locally and committed."
+            exit 1
+          fi
 
