--- a/packages/types/.npmignore
+++ b/packages/types/.npmignore
@@ -3,12 +3,20 @@ tsconfig.json
 *.tsbuildinfo
 node_modules/
 .git/
+.gitignore
 .env*
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .DS_Store
-.idea/
 .vscode/
-coverage/
+.idea/
+.editorconfig
 *.test.ts
-*.spec.ts
-
+test/
+__tests__/
+coverage/
+.npm
+.eslintcache
+.turbo
