fix: resolve TypeScript workspace dependency resolution in CI
- Change build script to build packages sequentially (types first, then client-sdk)
- Update client-sdk tsconfig to use 'node' moduleResolution for better workspace support
- Add resolveJsonModule to root tsconfig

This fixes the CI error where TypeScript couldn't find @mcp-marketplace/types
because client-sdk was trying to compile before types was built.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
+    "build": "npm run build --workspace=packages/types && npm run build --workspace=packages/marketplace-client",
     "dev": "npm run dev --workspaces",
     "test": "npm run test --workspaces || true",
     "publish:types": "npm publish --workspace=packages/types --access public",
