--- a/packages/marketplace-client/tsconfig.json
+++ b/packages/marketplace-client/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "./src",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "types": ["node"],
-    "moduleResolution": "node"
+    "sourceMap": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
