--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,25 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Extract version from tag
+        id: version
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          VERSION=${VERSION#refs/tags/}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted version: $VERSION"
+
+      - name: Update package versions
+        run: |
+          VERSION="${{ steps.version.outputs.version }}"
+          # Update types package version
+          npm pkg set version=$VERSION --workspace=packages/types
+          # Update client-sdk package version
+          npm pkg set version=$VERSION --workspace=packages/marketplace-client
+          # Update client-sdk dependency on types to match
+          npm pkg set dependencies.@mcp-marketplace/types="^$VERSION" --workspace=packages/marketplace-client
+          echo "Updated all packages to version $VERSION"
+
       - name: Build all packages
         run: npm run build
 
