--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mcp-marketplace/types",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TypeScript type definitions for MCP Marketplace",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,7 +33,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ggange/mcp-marketplace.git",
+    "url": "git+https://github.com/ggange/mcp-marketplace.git",
     "directory": "packages/types"
   },
   "homepage": "https://github.com/ggange/mcp-marketplace#readme",
